# PyIpsm

./: LICENSE  README.md  pyproject.toml  sample_prosper.py
src/: ipsm.py
src/PyIpsm/: ipsm.py  sample_prosper.py
src/Pyipsm/: sample_prosper.py
tests/: test_ipsm.py
